2018-09-12         [RELEASE] Release of filefill 1.3.2 (Nicole Cordes)
2018-09-12 fb797f5 [TASK] Update supporting files to EXT:my_skeleton 0.1.4 (Nicole Cordes)
2018-09-12 03ec1b0 [BUGFIX] Handle response from socket correctly (Nicole Cordes)
2018-09-12 8f80f8d [BUGFIX] Prevent uncaught exception while file upload (Nicole Cordes)
2018-09-12 48c2d9c [TASK] Update supporting files to EXT:my_skeleton 0.1.3 (Nicole Cordes)
2018-06-23 795a239 [TASK] Update supporting files to EXT:my_skeleton 0.1.0 (Nicole Cordes)

2018-06-22         [RELEASE] Release of filefill 1.3.1 (Nicole Cordes)
2018-06-21 86775c6 Use short scalar casting (Nicole Cordes)
2018-06-20 0c1d00f fix http_code check for typo3 7.6 (kaywalker)

2018-06-19         [RELEASE] Release of filefill 1.3.0 (Nicole Cordes)
2018-06-19 0bc79fa [BUGFIX] Simplify return conditions in ResourceFactorySlot (Nicole Cordes)
2018-06-11 d16bf28 [TASK] Add documentation for TYPO3_CONF_VARS configuration (Nicole Cordes)
2018-06-11 120b1e7 [BUGFIX] Support multiple domain configuration (Nicole Cordes)
2018-06-07 ff7640d [FEATURE] Allow storage configuration in TYPO3_CONF_VARS (Nicole Cordes)

2018-06-07         [RELEASE] Release of filefill 1.2.1 (Nicole Cordes)
2018-06-07 ebdda28 [BUGFIX] Ensure original file is always fetched (Nicole Cordes)

2018-03-15         [RELEASE] Release of filefill 1.2.0 (Nicole Cordes)
2018-03-15 7c6cb1e [FEATURE] Add slot to fetch processed files (Nicole Cordes)
2018-03-15 77dc578 [BUGFIX] Ensure only valid file paths are fetched (Nicole Cordes)
2018-03-15 02f3a38 [BUGFIX] Remove slash from domains right side (Nicole Cordes)
2018-03-15 d56976f [TASK] Add community part to README (Nicole Cordes)
2018-03-15 76a7b83 [TASK] Add header and license information (Nicole Cordes)
2018-03-14 73e53b5 [TASK] Update coding style rules (Nicole Cordes)

2018-03-12         [RELEASE] Release of filefill 1.1.0 (Nicole Cordes)
2018-03-12 482284d [FEATURE] Allow to reset missing files in storage record (Nicole Cordes)